tests/e2e/semantics/foreach_three_outputs.error
Error: syntax error in story at line 1, column 26

1|    foreach [true, false] as a, b, c
                               ^^^^^^^

E0105: `foreach` can only have one or two outputs
