tests/e2e/semantics/foreach_three_outputs.story
foreach [true, false] as a, b, c
	a = a + k
